2023-10-25T00:59:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6634348758 # 1297
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 6 4170
* notice: prev accum: outdated-unq outdated-all / unq all: 1772 168565 / 1812 172989
* notice: next accum: outdated-unq outdated-all / unq all: 1775 168866 / 1812 173083
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -47 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-10-10] / [2023-10-11 2023-10-24]

2023-10-24T16:17:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6629656304 # 1296
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 6 4164
* notice: prev accum: outdated-unq outdated-all / unq all: 1772 168565 / 1812 172895
* notice: next accum: outdated-unq outdated-all / unq all: 1772 168565 / 1812 172989
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -92 / +3 +207 -0 -0 / 3 207
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-24T08:17:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6624165852 # 1295
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 6 4162
* notice: prev accum: outdated-unq outdated-all / unq all: 1772 168565 / 1809 172782
* notice: next accum: outdated-unq outdated-all / unq all: 1772 168565 / 1812 172895
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -121 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]

2023-10-24T00:58:53Z: