@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-25T00:59:02Z",
-  "count" : 254,
+  "timestamp" : "2023-10-25T08:17:28Z",
+  "count" : 134,
   "count_minmax" : [ 112, 301 ],
-  "count_decinc" : [ -47, +301 ],
-  "uniques" : 4,
+  "count_decinc" : [ -167, +301 ],
+  "uniques" : 3,
   "uniques_minmax" : [ 2, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "uniques_decinc" : [ -1, +4 ]
 }
