@@ -1,11 +1,11 @@
 {
-  "count": 4170,
+  "count": 4161,
   "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-10-11T00:00:00Z",
-      "count": 254,
-      "uniques": 4
+      "count": 134,
+      "uniques": 3
     },
     {
       "timestamp": "2023-10-12T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-24T00:00:00Z",
       "count": 301,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-10-25T00:00:00Z",
+      "count": 111,
+      "uniques": 1
     }
   ]
 }
